--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "chat-komunitas",
   "version": "1.0.0",
-  "description": "Chat komunitas match lawan jenis",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "express": "^4.19.2",
     "socket.io": "^4.7.2"
   }
 }
