--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "chat-komunitas",
+  "name": "chat-random-server",
   "version": "1.0.0",
   "main": "server.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "socket.io": "^4.7.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.5",
+    "multer": "^1.4.5-lts.1",
+    "cloudinary": "^2.5.0",
+    "multer-storage-cloudinary": "^4.0.0"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
