--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "chat-random-server",
   "version": "1.0.0",
-  "description": "Server untuk Chat Random dengan Socket.io",
+  "description": "Server untuk Chat Random anonim dengan Socket.io + Cloudinary",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cloudinary": "^2.5.1",
     "express": "^4.19.2",
     "socket.io": "^4.7.5",
-    "multer": "^1.4.5-lts.1",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "author": "",
+  "license": "ISC"
 }
